Some extra fixes

--- a/sth.cabal
+++ b/sth.cabal
@@ -55,3 +55,4 @@ executable sth
   -- Other library packages from which modules are imported.
   build-depends:       base ==4.6.*
   
+  GHC-Options: -rtsopts
